--- a/_locales/zh/ds18b20-strings.json
+++ b/_locales/zh/ds18b20-strings.json
@@ -1,6 +1,5 @@
 {
-  "DS18B20.TemperatureString|block": "|%p|读取温度",
-  "DS18B20.TemperatureNumber|block": "|%p|读取温度2",
+  "DS18B20.TemperatureNumber|block": "18b20|%p|读取温度,
   "DS18B20.pin.pin0|block": "引脚0",
   "DS18B20.pin.pin1|block": "引脚1",
   "DS18B20.pin.pin2|block": "引脚2",
